switched to parallel GC for new generation and tuned size of new generation part of heap