@@ -118,7 +118,7 @@
                     <configuration>
                         <runOrder>alphabetical</runOrder>
                         <forkMode>always</forkMode>
-                        <argLine>-server -Xms4g -Xmx4g -Xss1m -XX:NewRatio=1 -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark</argLine>
+                        <argLine>-server -Xms4g -Xmx4g -Xss1m -XX:NewSize=3g -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseNUMA -XX:+UseCondCardMark</argLine>
                     </configuration>
                 </plugin>
             </plugins>
